objects/npe4__Relationship_Lookup__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Provides table of gendered and gender-neutral reciprocal relationships for various relationship types (ie. Father-Son, Father-Daughter, Father-Child)</description>
    <fields>
        <fullName>npe4__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this reciprocal lookup is active.</description>
        <inlineHelpText>Indicates if this reciprocal lookup is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe4__Female__c</fullName>
        <description>The value used if the Contact&apos;s gender field matches the values in the Female Custom Label or the Contact&apos;s salutation indicates gender.</description>
        <inlineHelpText>The value used if the Contact&apos;s gender field matches the values in the Female Custom Label or the Contact&apos;s Salutation indicates gender.</inlineHelpText>
        <label>Female</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe4__Male__c</fullName>
        <description>The value used if the Contact&apos;s gender field matches the values in the Male Custom Label or the Contact&apos;s salutation indicates gender.</description>
        <inlineHelpText>The value used if the Contact&apos;s gender field matches the values in the Male Custom Label or the Contact&apos;s Salutation indicates gender.</inlineHelpText>
        <label>Male</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe4__Neutral__c</fullName>
        <description>The value used if the Contact&apos;s gender field does not match either the Male or Female Custom Labels, and the Contact&apos;s salutation does not infer gender.</description>
        <inlineHelpText>The value used if the Contact&apos;s gender field does not match either the Male or Female Custom Labels, and the Contact&apos;s Salutation does not infer gender.</inlineHelpText>
        <label>Neutral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Relationship Lookup</label>
</CustomObject>